--- a/ompi/mca/part/persist/Makefile.am
+++ b/ompi/mca/part/persist/Makefile.am
@@ -6,6 +6,8 @@
 # Copyright (c) 2010      Cisco Systems, Inc.  All rights reserved.
 # Copyright (c) 2017      IBM Corporation.  All rights reserved.
 # Copyright (c) 2020-2021 Sandia National Laboratories. All rights reserved.
+# Copyright (c) 2024      High Performance Computing Center Stuttgart,
+#                         University of Stuttgart.  All rights reserved.
 # $COPYRIGHT$
 #
 # Additional copyrights may follow
