implement a simple aggregation scheme
This aggregation scheme is intended to allow OpenMPI to transfer larger messages
if the user-reported partitions are too small or too high in number.
This is achieved by using an internal partitioning where each internal (transfer)
partition corresponds to one or multiple user-reported partitions.

The scheme provides a method to mark a user partition as ready, that optionally
returns a transfer partition that is ready.

This is implemented by associating each transfer partition with an atomic counter,
tracking the number of corresponding pready-calls already made.
If a counter reaches the number of corresponding user-partitions, the corresponding
transfer partition is returned.

This implementation is thread-safe.

Signed-off-by: Axel Schneewind <axel.schneewind@hlrs.de>

--- a/ompi/mca/part/persist_aggregated/Makefile.am
+++ b/ompi/mca/part/persist_aggregated/Makefile.am
@@ -37,7 +37,9 @@ local_sources = \
 	part_persist_aggregated_request.h \
 	part_persist_aggregated_request.c \
 	part_persist_aggregated_sendreq.h \
-	part_persist_aggregated_sendreq.c 
+	part_persist_aggregated_sendreq.c \
+	schemes/part_persist_aggregated_scheme_regular.h \
+	schemes/part_persist_aggregated_scheme_regular.c
 
 mcacomponentdir = $(ompilibdir)
 mcacomponent_LTLIBRARIES = $(component_install)
